--- a/klein2012/klein2012structured_poster.tex
+++ b/klein2012/klein2012structured_poster.tex
@@ -92,11 +92,11 @@ fill=orange!20]
 
 
 
-\conf{European workshop on reinforcement learning}
+\conf{Journée d'automne d'IAEM. APIL2012}
 \title{Structured Classification for Inverse Reinforcement Learning}
-\author{\underline{Edouard Klein}$^{\dag\ddag}$, Bilal Piot$^{\dag\textrm{\Ankh}}$, Matthieu Geist$^\dag$ and Olivier Pietquin$^{\dag\textrm{\Ankh}}$\\\texttt{firstname.lastname@supelec.fr}}
+\author{\underline{Edouard Klein}}
 \date{\today}
-\institute[Supélec]{$\dag$Equipe IMS/MaLIS (Supélec), France\\$\ddag$Equipe ABC UMR 7503 (Loria-CNRS), France\\\Ankh UMI 2958 (GeorgiaTech-CNRS)}
+\institute[Supélec]{Equipe IMS/MaLIS (Supélec), France\\Equipe ABC UMR 7503 (Loria-CNRS), France}
 \newlength{\columnheight}
 \setlength{\columnheight}{105cm}
 
