--- a/klein2012structured_NIPS/klein2012structured_poster.tex
+++ b/klein2012structured_NIPS/klein2012structured_poster.tex
@@ -92,7 +92,7 @@ fill=orange!20]
 
 
 
-\conf{European workshop on reinforcement learning}
+\conf{NIPS 2012}
 \title{Structured Classification for Inverse Reinforcement Learning}
 \author{\underline{Edouard Klein}$^{\dag\ddag}$, Bilal Piot$^{\dag\textrm{\Ankh}}$, Matthieu Geist$^\dag$ and Olivier Pietquin$^{\dag\textrm{\Ankh}}$\\\texttt{firstname.lastname@supelec.fr}}
 \date{\today}
